test/fixtures/public/analysis/success/undefined_var_array2.jmm
class Child {
    public int f(int[] d) {
        int[] c;
        c = new int[10];

        c[1] = d[2];
        return 0;
    }
}