test/fixtures/public/analysis/fail/undefined_var_array1.jmm
class Child {
    public static void main(String[] args) {
        int[] c;
        int[] d;

        c[1] = d[2]; // Undefined c and d
    }
}